--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "randomstring": "^1.3.0"
   }
 }
