--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "formik": "^2.2.9",
+    "i18next": "^23.6.0",
+    "i18next-browser-languagedetector": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
