--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "swagger-autogen": "node swagger.cjs"
   },
   "keywords": [],
   "author": "Matheus Biscalchim",
@@ -22,6 +23,11 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
     "nodemon": "^2.0.22",
-    "randomstring": "^1.3.0"
+    "randomstring": "^1.3.0",
+    "swagger-autogen": "^2.23.4",
+    "swagger-ui-express": "^4.1.4"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
   }
 }
